objects/Selenium_Group_Variable__c.object
<CustomObject>
    <fields>
        <fullName>Display_Value__c</fullName>
        <formula>if( Hide_Value__c, &quot;*****&quot;, Value__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hide_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this Checkbox to hide the value in the Test Group related list.</inlineHelpText>
        <label>Hide Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Selenium_Test_Group__c</fullName>
        <label>Selenium Test Group</label>
        <referenceTo>Selenium_Test_Group__c</referenceTo>
        <relationshipLabel>Selenium Group Variables</relationshipLabel>
        <relationshipName>Selenium_Group_Variables</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <inlineHelpText>The Selenium Group Variable is valid only within this Selenium Group.  On Test Cases, a variable can be referred to as {!Group.VARIABLE_NAME}.</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Selenium Group Variable</label>
    <nameField>
        <label>Selenium Group Variable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Selenium Group Variables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>